--- a/index.html
+++ b/index.html
@@ -5,34 +5,96 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Results summary component</title>
 
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
+  <div id="container">
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+    <section id="result">
+
+      <h3>Your Result</h3>
+
+      <article id="circle">
+        <p id="score">76</p>
+        <p id="of_full">of 100</p>
+      </article>
+
+      <h2>Great</h2>
+
+      <p>
+        You scored higher than 65% of the people who have taken these tests.
+      </p>
+
+    </section>
+
+    <section id="summary">
   
-  Summary
+      <h3>Summary</h3>
 
-  Reaction
-  80 / 100
+      <article id="reaction">
+        <div id="rea_left" class="left">
+          <img src="assets/images/icon-reaction.svg" alt="">
+          <p>Reaction</p>
+          <div class="clearfix"></div>
+        </div>
 
-  Memory
-  92 / 100
+        <div class="score">
+          <p>80 <span>/ 100</span></p>
+        </div>
 
-  Verbal
-  61 / 100
+      </article>
 
-  Visual
-  72 / 100
+      <article id="memory">
+        <div id="mem_left" class="left">
+          <img src="assets/images/icon-memory.svg" alt="">
+          <p>Memory</p>
+          <div class="clearfix"></div>
+        </div>
 
-  Continue
+        <div class="score">
+          <p>92 <span>/ 100</span></p>
+        </div>
+      </article>
+
+      <article id="verbal">
+        <div id="ver_left" class="left">
+          <img src="assets/images/icon-verbal.svg" alt="">
+          <p>Verbal</p>
+          <div class="clearfix"></div>
+        </div>
+
+        <div class="score">
+          <p>61 <span>/ 100</span></p>
+        </div>      
+      </article>
+
+      <article id="visual">
+        <div id="vis_left" class="left">
+          <img src="assets/images/icon-visual.svg" alt="">
+          <p>Visual</p>
+          <div class="clearfix"></div>
+        </div>
+        
+        <div class="score">
+          <p>72 <span>/ 100</span></p>
+        </div>
+
+      </article>
+
+      <button>
+        Continue
+      </button>
+
+    </section>
+
+  </div>
   
 </body>
 </html>
